Fixed confusing error message regarding featureset loading

--- a/README
+++ b/README
@@ -401,7 +401,7 @@ pages 1500-1511.
 Franz Josef Och and Hermann Ney. A Systematic Comparison of Various Statistical Alignment Models.
 Computational Linguistics, Volume 29, Number 1, pages 19-51. March 2003.
 
-Jason Riesa and Daniel Marcu. Hierarchical Seach for Word Alignment. 2010.
+Jason Riesa and Daniel Marcu. Hierarchical Search for Word Alignment. 2010.
 Proceedings of ACL, pages 157-166.
 
 Jason Riesa, Ann Irvine, and Daniel Marcu. Feature-Rich Language-Independent
